data/derived/sp14/progs/unify/prog2300.ml.out
Characters 135-170:
  buildSine( build(rand, depth - 1) )
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
